--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/BuoiHoc/Create.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/BuoiHoc/Create.cshtml
@@ -16,15 +16,14 @@
                 if (Model.LopHocId != Guid.Empty)
                 {
                     @Html.HiddenFor(model => model.LopHocId)
-
                     <div class="col-md-12 mb-3">
                         <label class="form-label">Lớp Học</label>
-                        <input type="text" class="form-control" value="@ViewBag.TenLopHoc" readonly />
+                        <input type="text" class="form-control" readonly
+                               value="@($"{ViewBag.TenLopHoc} - ({((DateTime)ViewBag.NgayBatDau).ToString("dd/MM/yyyy")} - {((DateTime)ViewBag.NgayKetThuc).ToString("dd/MM/yyyy")})")" />
                     </div>
                 }
                 else
                 {
-                    <!-- Chọn thủ công từ dropdown -->
                     <div class="mb-3">
                         @Html.Label("LopHocId", "Lớp Học", new { @class = "form-label" })
                         <span class="text-danger">*</span>
@@ -32,19 +31,16 @@
                             <option value="" class="text-center">-- Chọn Lớp Học --</option>
                             @foreach (var lopHoc in ViewBag.LopHocList)
                             {
-                                var ngayBatDau = lopHoc.NgayBatDau != null ? ((DateTime)lopHoc.NgayBatDau).ToString("dd/MM/yyyy") : "??";
-                                var ngayKetThuc = lopHoc.NgayKetThuc != null ? ((DateTime)lopHoc.NgayKetThuc).ToString("dd/MM/yyyy") : "??";
+                                var ngayBatDau = lopHoc.NgayBatDau.ToString("dd/MM/yyyy");
+                                var ngayKetThuc = lopHoc.NgayKetThuc.ToString("dd/MM/yyyy");
 
                                 <option value="@lopHoc.LopHocId">
                                     @lopHoc.TenLopHoc - (@ngayBatDau - @ngayKetThuc)
                                 </option>
-
                             }
                         </select>
                     </div>
                 }
-
-
 
                 <div class="mb-3">
                     @Html.LabelFor(model => model.NgayHoc, "Ngày Học", new { @class = "form-label" })
