--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Index.cshtml
@@ -6,21 +6,27 @@
     Layout = "~/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml";
 }
 
-
-
 <!-- Courses Start -->
 <div class="container-xxl py-5">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-            <p>
-                <a href="@Url.Action("Create")" class="btn btn-success mt-3 btn-lg">
-                    <i class="fas fa-plus-circle"></i> Thêm Khóa Học Mới
-                </a>
-            </p>
-
-            <h6 class="section-title bg-white text-center text-primary px-3"></h6>
-            <h1 class="mb-5">DANH SÁCH KHÓA HỌC</h1>
+            <h3 class="mb-5"><i class="fa-solid fa-graduation-cap me-2"></i>DANH SÁCH KHÓA HỌC</h3>
         </div>
+
+        <!-- Action Bar -->
+        <div class="card-header text-white text-center d-flex flex-wrap align-items-center justify-content-center gap-2 mb-3 mt-4">
+            <a href="@Url.Action("Create")" class="btn btn-success">
+                <i class="bi bi-plus-circle"></i> Thêm Khóa Học
+            </a>
+            <input type="text" class="form-control w-50" id="searchInput" placeholder="Tìm kiếm Khóa Học" />
+            <button class="btn btn-primary">
+                <i class="fas fa-search"></i>
+            </button>
+            <button class="btn btn-danger d-none" id="btnXoaNhieu" onclick="xoaNhieu()">
+                <i class="bi bi-trash3"></i> Xóa đã chọn
+            </button>
+        </div>
+
         <div class="row g-4 justify-content-center">
             @foreach (var khoaHoc in Model)
             {
@@ -40,23 +46,19 @@
                                 <img class="img-fluid" src='@imagePath' alt="@khoaHoc.TenKhoaHoc" />
                             </a>
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                                <a href="@Url.Action("Details", "KhoaHoc", new { id = khoaHoc.KhoaHocId })" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 30px 30px;">Thông Tin Chi Tiết</a>
+                                <a href="@Url.Action("Details", "KhoaHoc", new { id = khoaHoc.KhoaHocId })" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 30px 0 0 30px;">Thông Tin Chi Tiết</a>
+                                <a href="@Url.Action("Edit", "KhoaHoc", new { id = khoaHoc.KhoaHocId })" class="flex-shrink-0 btn btn-sm btn-danger px-3" style="border-radius: 0 30px 30px 0;">Chỉnh sửa</a>
                             </div>
+
                         </div>
                         <div class="text-center p-4 pb-0">
                             <h3 class="mb-0">$149.00</h3>
                             <div class="mb-3">
-                                <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
-                                <small>(123)</small>
+
                             </div>
                             <h5 class="mb-4">@khoaHoc.TenKhoaHoc</h5>
                         </div>
                         <div class="d-flex border-top">
-                            @*<small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>số lượng người học</small>*@
                             <small class="flex-fill text-center border-end py-2">
                                 <i class="fa fa-clock text-primary me-2"></i>@khoaHoc.ThoiLuong <span class="fw-bold text-secondary">tiết</span>
                             </small>
@@ -70,6 +72,7 @@
         </div>
     </div>
 </div>
+
 <div class="d-flex justify-content-center mt-4">
     <ul class="pagination">
         @if (Model.HasPreviousPage)
@@ -106,3 +109,4 @@
         }
     </ul>
 </div>
+
